[project]
name = "moodscape-backend"
version = "0.1.0"
description = "Moodscape backend."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi-utils>=0.8.0",
    "fastapi[standard]>=0.115.4",
    "nanoid>=2.0.0",
    "pre-commit>=4.0.1",
    "pydantic-settings>=2.6.1",
    "pydantic>=2.9.2",
    "redis>=5.2.0",
    "slowapi>=0.1.9",
    "pandas>=2.2.3",
]

[tool.mypy]
strict = true

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
